--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.0.8",
     "axios": "^1.7.9",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.0.0",
@@ -29,7 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "3.3.5",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.1.0"
   }
 }
